<resources>
    <string name="app_name">Ethereum Wallet</string>
    <string name="action_settings">Settings</string>

    <string name="signup_label">Signup</string>
    <string name="response_label">Response</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="label_device_id">Device ID: %1$s</string>

    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label">Email</string>
    <string name="pin_label">PIN</string>
    <string name="default_error_label">Something went wrong</string>
    <string name="button_create">Create Account</string>
    <string name="button_try_again">Try again</string>
    <string name="button_back">Back</string>
</resources>